[package]
name = "cyew"
version = "1.0.0"
edition = "2021"
description = "cellular automata engine"
readme = "README.md"
repository = "https://github.com/Ethancatepete/Cellular-Automata"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
yew = { version="0.20", features=["csr"] }
getrandom = { version = "0.2", features = ["js"] }
log = "0.4"
rand = "0.8"
wasm-logger = "0.2"
gloo = {version = "0.10.0", features = ["storage"]}
rhai = { version = "*", features = ["only_i64","internals","wasm-bindgen"] }
wasm-bindgen = { version = "0.2.45", features = ["serde-serialize"] }
js-sys = "0.3"
monaco = { git = "https://github.com/siku2/rust-monaco", features = ["yew-components"] }
web-sys = { version = "*", features = ["HtmlCollection"] }
wasm-bindgen-futures = "*"
split-yew = "0.1.1"
