[package]
name = "cyew"
version = "0.1.0"
edition = "2021"
description = "cellular automata engine"
readme = "README.md"
repository = "https://github.com/Ethancatepete/Cellular-Automata"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
yew = { version="0.20", features=["csr"] }
getrandom = { version = "0.2", features = ["js"] }
log = "0.4"
rand = "0.8"
wasm-logger = "0.2"
gloo = "0.8"
rhai = "*"
